<resources>
    <string name="app_name">Github User API</string>
    <string name="app_title">Github Search App</string>
    <string name="app_dev">Iqbal Mungid</string>
    <string name="detail_act">Detail User</string>
    <string name="propict">Profile Picture</string>
    <string name="uname">Username</string>
    <string name="search">Search</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="save_fav">Make Favorite ?</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="theme">Dark Theme</string>
    <string name="tab">Tab Layout</string>
    <string name="viewpager">View Pager</string>
    <string name="btnback">Back Button</string>
    <string name="darkmode">Enable Dark Mode ?</string>
</resources>