<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greywhite"
    tools:context=".ui.detail.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_pp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:src="@tools:sample/avatars"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/btnback"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btn_fav"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_background"
        android:contentDescription="@string/save_fav"
        android:focusable="false"
        android:foreground="@drawable/toggle_favorite"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Nama Pengguna"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/img_pp"
        app:layout_constraintStart_toStartOf="@id/img_pp"
        app:layout_constraintTop_toBottomOf="@id/img_pp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/detail_act" />

    <TextView
        android:id="@+id/txt_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Username"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintStart_toStartOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Repository"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txt_uname"
        app:layout_constraintEnd_toEndOf="@+id/txt_uname"
        app:layout_constraintStart_toStartOf="@+id/txt_uname" />

    <TextView
        android:id="@+id/txt_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Location"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txt_repo"
        app:layout_constraintEnd_toEndOf="@+id/txt_repo"
        app:layout_constraintStart_toStartOf="@+id/txt_repo" />

    <TextView
        android:id="@+id/txt_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Company"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txt_loc"
        app:layout_constraintEnd_toEndOf="@+id/txt_loc"
        app:layout_constraintStart_toStartOf="@+id/txt_loc" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/txt_comp"
        app:layout_constraintStart_toStartOf="@id/txt_comp"
        app:layout_constraintTop_toBottomOf="@id/txt_comp">

        <TextView
            android:id="@+id/txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="14dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_people"
            tools:text="Followers" />

        <TextView
            android:id="@+id/txt_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Following" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/greywhite"
        android:contentDescription="@string/tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:contentDescription="@string/viewpager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab"/>

</androidx.constraintlayout.widget.ConstraintLayout>